--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyMobileWallet</string>
+    <string name="no_expenses">No saved expenses</string>
 </resources>
