Updated MainActivity, MainPresenter, MainContract and layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,7 @@
     <string name="keep_me_logged_in">Keep me logged in</string>
 
     <string name="logout">Logout</string>
+    <string name="summary">Summary</string>
+    <string name="expense_details">Expense details</string>
 
 </resources>
