--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- Login                                      -->
     <!-- ========================================== -->
 
-    <string name="login">Login</string>
+    <string name="login">Log In</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
 
@@ -34,5 +34,6 @@
     <string name="logout">Logout</string>
     <string name="summary">Summary</string>
     <string name="expense_details">Expense details</string>
+    <string name="welcome">Welcome</string>
 
 </resources>
